@@ -29,7 +29,7 @@ Supported machines:
    * MacBook Pro 13", 15", 17" (June 2009)
    * MacBook Pro Core i5/i7 15", 17" (April 2010)
    * MacBook Pro Core2 Duo 13" (April 2010)
-   * MacBook Pro Core i5/i7 13", 15", 17" (Early 2011)
+   * MacBook Pro Core i5/i7 13", 15", 17" (Early 2011, Mid 2012)
    * MacBook Core Duo (May 2006)
    * MacBook Core2 Duo (November 2006 & May 2007)
    * MacBook Core2 Duo Santa Rosa (November 2007)
@@ -92,7 +92,7 @@ either one of:
  - /dev/uinput
  - /dev/misc/uinput
 
-Or by checking the output of 
+Or by checking the output of
  $ lsmod | grep uinput
 
 If the module is not loaded, load it manually with
