@@ -78,9 +78,15 @@
 #define USB_PRODUCT_ID_WELLSPRING5_ISO    0x0246
 #define USB_PRODUCT_ID_WELLSPRING5_JIS    0x0247
 
-#define USB_PRODUCT_ID_MAC2012_ANSI       0x0252
-#define USB_PRODUCT_ID_MAC2012_ISO        0x0253
-#define USB_PRODUCT_ID_MAC2012_JIS        0x0254
+/* Apple WellSpring Va keyboard + trackpad */
+#define USB_PRODUCT_ID_WELLSPRING5A_ANSI  0x0252
+#define USB_PRODUCT_ID_WELLSPRING5A_ISO   0x0253
+#define USB_PRODUCT_ID_WELLSPRING5A_JIS   0x0254
+
+ /* Apple WellSpring VII keyboard + trackpad */
+#define USB_PRODUCT_ID_WELLSPRING7_ANSI  0x0262
+#define USB_PRODUCT_ID_WELLSPRING7_ISO   0x0263
+#define USB_PRODUCT_ID_WELLSPRING7_JIS   0x0264
 
 /* Apple external USB keyboard, white */
 #define USB_PRODUCT_ID_APPLE_EXTKBD_WHITE   0x020c
