@@ -315,11 +315,22 @@ struct machine_ops mb_mops[] = {
     /* .evdev_identify = evdev_is_wellspring5, */
   },
 
-  { /* MacBookPro9,1 (15", Mid 2012) */
+  { /* MacBookPro9,1 (15", Mid 2012)
+     * MacBookPro9,2 (13", Mid 2012)
+     */
     .type = MACHINE_MACBOOKPRO_9,
     .lcd_backlight_probe = mbp_sysfs_backlight_probe,
     .lcd_backlight_step = sysfs_backlight_step,
     .lcd_backlight_toggle = sysfs_backlight_toggle,
+    /* .evdev_identify = evdev_is_wellspring5a, */
+  },
+
+  { /* MacBookPro10,1 (15" Retina, Mid 2012) */
+    .type = MACHINE_MACBOOKPRO_10,
+    .lcd_backlight_probe = mbp_sysfs_backlight_probe,
+    .lcd_backlight_step = sysfs_backlight_step,
+    .lcd_backlight_toggle = sysfs_backlight_toggle,
+    /* .evdev_identify = evdev_is_wellspring7, */
   },
 
   /* MacBook machines */
@@ -633,7 +644,7 @@ check_machine_pmu(void)
 
   else
     logmsg(LOG_ERR, "Unknown Apple machine: %s", buffer);
-  
+
   if (ret != MACHINE_MAC_UNKNOWN)
     logmsg(LOG_INFO, "PMU machine check: running on a %s", buffer);
 
@@ -763,12 +774,13 @@ check_machine_dmi(void)
 	   || (strcmp(buf, "MacBookPro8,2") == 0)
 	   || (strcmp(buf, "MacBookPro8,3") == 0))
     ret = MACHINE_MACBOOKPRO_8;
-  /* MacBook Pro 15" (Mid 2012) */
-  else if ((strcmp(buf, "MacBookPro9,1") == 0))
+  /* MacBook Pro 13" & 15" (Mid 2012) */
+  else if ((strcmp(buf, "MacBookPro9,1") == 0)
+     || (strcmp(buf, "MacBookPro9,2") == 0))
     ret = MACHINE_MACBOOKPRO_9;
-  /* Macbook Pro 13" (Mid 2012) */
-  else if ((strcmp(buf, "MacBookPro9,2") == 0))
-    ret = MACHINE_MACBOOKPRO_9;
+  /* Macbook Pro 15" Retina (Mid 2012) */
+  else if ((strcmp(buf, "MacBookPro10,1") == 0))
+    ret = MACHINE_MACBOOKPRO_10;
   /* Core Duo MacBook (May 2006) */
   else if (strcmp(buf, "MacBook1,1") == 0)
     ret = MACHINE_MACBOOK_1;
