@@ -39,6 +39,7 @@ typedef enum
     MACHINE_MACBOOKPRO_7,
     MACHINE_MACBOOKPRO_8,
     MACHINE_MACBOOKPRO_9,
+    MACHINE_MACBOOKPRO_10,
 
     MACHINE_MACBOOK_1,
     MACHINE_MACBOOK_2,
